--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,14 @@
       }
     }
   </style>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51355575-11"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-51355575-11');
+  </script>
 </body>
 
 </html>
